additional carbon updates for cs keycloak theme
Signed-off-by: Steve Grube <sgrube@us.ibm.com>

--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_de.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_de.properties
@@ -1,3 +1,7 @@
 usernameOrEmail=Benutzername
-loginAccountTitle=Bei IBM Cloud Pak anmelden
+loginAccountTitle=Anmelden
 doLogIn=Anmelden
+identity-provider-login-label=Alternative logins
+loginProfileTitle=Update account information
+loginIdpReviewProfileTitle=Update account information
+doForgotPassword=Forgot password?
