--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_es.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_es.properties
@@ -1,3 +1,7 @@
 usernameOrEmail=Nombre de usuario
-loginAccountTitle=Inicie sesión en IBM Cloud Pak
+loginAccountTitle=Inicie sesión
 doLogIn=Iniciar sesión
+identity-provider-login-label=Alternative logins
+loginProfileTitle=Update account information
+loginIdpReviewProfileTitle=Update account information
+doForgotPassword=Forgot password?
