--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_fr.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_fr.properties
@@ -1,3 +1,7 @@
 usernameOrEmail=Nom d'utilisateur
-loginAccountTitle=Connexion à IBM Cloud Pak
+loginAccountTitle=Connexion
 doLogIn=Connexion
+identity-provider-login-label=Alternative logins
+loginProfileTitle=Update account information
+loginIdpReviewProfileTitle=Update account information
+doForgotPassword=Forgot password?
