--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_it.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_it.properties
@@ -1,3 +1,7 @@
 usernameOrEmail=Nome utente
-loginAccountTitle=Accedere a IBM Cloud Pak
+loginAccountTitle=Accedi
 doLogIn=Accedi
+identity-provider-login-label=Alternative logins
+loginProfileTitle=Update account information
+loginIdpReviewProfileTitle=Update account information
+doForgotPassword=Forgot password?
