--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_ja.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_ja.properties
@@ -1,3 +1,7 @@
 usernameOrEmail=ユーザー名
-loginAccountTitle=IBM Cloud Pak にログイン
+loginAccountTitle=ログイン
 doLogIn=ログイン
+identity-provider-login-label=Alternative logins
+loginProfileTitle=Update account information
+loginIdpReviewProfileTitle=Update account information
+doForgotPassword=Forgot password?
