--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_ko.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_ko.properties
@@ -1,3 +1,7 @@
 usernameOrEmail=사용자 이름
-loginAccountTitle=IBM Cloud Pak에 로그인
+loginAccountTitle=로그인
 doLogIn=로그인
+identity-provider-login-label=Alternative logins
+loginProfileTitle=Update account information
+loginIdpReviewProfileTitle=Update account information
+doForgotPassword=Forgot password?
