--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_zh_CN.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_zh_CN.properties
@@ -1,3 +1,7 @@
 usernameOrEmail=用户名
-loginAccountTitle=登录 IBM Cloud Pak
+loginAccountTitle=登录
 doLogIn=登录
+identity-provider-login-label=Alternative logins
+loginProfileTitle=Update account information
+loginIdpReviewProfileTitle=Update account information
+doForgotPassword=Forgot password?
