--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_zh_TW.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_zh_TW.properties
@@ -1,3 +1,7 @@
 usernameOrEmail=使用者名稱
-loginAccountTitle=登入 IBM Cloud Pak
+loginAccountTitle=登入
 doLogIn=登入
+identity-provider-login-label=Alternative logins
+loginProfileTitle=Update account information
+loginIdpReviewProfileTitle=Update account information
+doForgotPassword=Forgot password?
