translated strings for keycloak theme
Signed-off-by: Steve Grube <sgrube@us.ibm.com>

--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_fr.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_fr.properties
@@ -1,7 +1,7 @@
-usernameOrEmail=Nom d'utilisateur
+usernameOrEmail=Nom d''utilisateur
 loginAccountTitle=Connexion
 doLogIn=Connexion
-identity-provider-login-label=Alternative logins
-loginProfileTitle=Update account information
-loginIdpReviewProfileTitle=Update account information
-doForgotPassword=Forgot password?
+identity-provider-login-label=Connexions alternatives
+loginProfileTitle=Mettre à jour les informations de compte
+loginIdpReviewProfileTitle=Mettre à jour les informations de compte
+doForgotPassword=Mot de passe oublié ?
