--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_it.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_it.properties
@@ -1,7 +1,7 @@
 usernameOrEmail=Nome utente
 loginAccountTitle=Accedi
 doLogIn=Accedi
-identity-provider-login-label=Alternative logins
-loginProfileTitle=Update account information
-loginIdpReviewProfileTitle=Update account information
-doForgotPassword=Forgot password?
+identity-provider-login-label=Accessi alternativi
+loginProfileTitle=Aggiorna informazioni sull''account
+loginIdpReviewProfileTitle=Aggiorna informazioni sull''account
+doForgotPassword=Hai dimenticato la password?
