--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_ja.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_ja.properties
@@ -1,7 +1,7 @@
 usernameOrEmail=ユーザー名
 loginAccountTitle=ログイン
 doLogIn=ログイン
-identity-provider-login-label=Alternative logins
-loginProfileTitle=Update account information
-loginIdpReviewProfileTitle=Update account information
-doForgotPassword=Forgot password?
+identity-provider-login-label=代替ログイン
+loginProfileTitle=アカウント情報の更新
+loginIdpReviewProfileTitle=アカウント情報の更新
+doForgotPassword=パスワードを忘れましたか?
