--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_de.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_de.properties
@@ -1,7 +1,7 @@
 usernameOrEmail=Benutzername
 loginAccountTitle=Anmelden
 doLogIn=Anmelden
-identity-provider-login-label=Alternative logins
-loginProfileTitle=Update account information
-loginIdpReviewProfileTitle=Update account information
-doForgotPassword=Forgot password?
+identity-provider-login-label=Alternative Anmeldungen
+loginProfileTitle=Kontoinformationen aktualisieren
+loginIdpReviewProfileTitle=Kontoinformationen aktualisieren
+doForgotPassword=Kennwort vergessen?
