--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_es.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_es.properties
@@ -1,7 +1,7 @@
 usernameOrEmail=Nombre de usuario
-loginAccountTitle=Inicie sesión
+loginAccountTitle=Iniciar sesión
 doLogIn=Iniciar sesión
-identity-provider-login-label=Alternative logins
-loginProfileTitle=Update account information
-loginIdpReviewProfileTitle=Update account information
-doForgotPassword=Forgot password?
+identity-provider-login-label=Inicios de sesión alternativos
+loginProfileTitle=Actualizar información de cuenta
+loginIdpReviewProfileTitle=Actualizar información de cuenta
+doForgotPassword=¿Ha olvidado la contraseña?
