--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_ko.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_ko.properties
@@ -1,7 +1,7 @@
 usernameOrEmail=사용자 이름
 loginAccountTitle=로그인
 doLogIn=로그인
-identity-provider-login-label=Alternative logins
-loginProfileTitle=Update account information
-loginIdpReviewProfileTitle=Update account information
-doForgotPassword=Forgot password?
+identity-provider-login-label=대체 로그인
+loginProfileTitle=계정 정보 업데이트
+loginIdpReviewProfileTitle=계정 정보 업데이트
+doForgotPassword=비밀번호를 잊으셨습니까?
