--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_pt_BR.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_pt_BR.properties
@@ -1,7 +1,7 @@
 usernameOrEmail=Nome do usuário
 loginAccountTitle=Efetuar login
 doLogIn=Efetuar login
-identity-provider-login-label=Alternative logins
-loginProfileTitle=Update account information
-loginIdpReviewProfileTitle=Update account information
-doForgotPassword=Forgot password?
+identity-provider-login-label=Logins alternativos
+loginProfileTitle=Atualizar informações da conta
+loginIdpReviewProfileTitle=Atualizar informações da conta
+doForgotPassword=Esqueceu a senha?
