--- a/hack/keycloak-themes/theme/cloudpak/login/messages/messages_zh_CN.properties
+++ b/hack/keycloak-themes/theme/cloudpak/login/messages/messages_zh_CN.properties
@@ -1,7 +1,7 @@
 usernameOrEmail=用户名
 loginAccountTitle=登录
 doLogIn=登录
-identity-provider-login-label=Alternative logins
-loginProfileTitle=Update account information
-loginIdpReviewProfileTitle=Update account information
-doForgotPassword=Forgot password?
+identity-provider-login-label=备用登录
+loginProfileTitle=更新帐户信息
+loginIdpReviewProfileTitle=更新帐户信息
+doForgotPassword=忘记密码？
